--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
         <section class="s5 _music">
             <h1 data="MUSIC">MUSIC</h1>
             <div class="music_frame">
-                <iframe width="100%" height="650" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/129665374%3Fsecret_token%3Ds-XvYrs&color=%23ff0000&auto_play=false&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=true"></iframe>
+                <iframe width="100%" height="" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/129665374%3Fsecret_token%3Ds-XvYrs&color=%23ff0000&auto_play=false&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=true"></iframe>
             </div>
 
-            <div class="music_frame">
-                <iframe allow="encrypted-media" src="https://open.spotify.com/embed/playlist/2YIk7xK0jiE4YvNlatPOKv?wmode=opaque" width="100%" allowtransparency="true" data-embed="true" frameborder="0" height="430"></iframe>
+            <div class="music_frame spotify">
+                <iframe allow="encrypted-media" src="https://open.spotify.com/embed/playlist/2YIk7xK0jiE4YvNlatPOKv?wmode=opaque" width="100%" allowtransparency="true" data-embed="true" frameborder="0" height=""></iframe>
             </div>
         </section>
     </main>
