--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,9 +18,9 @@
     <meta name="twitter:url" content="https://www.alexwongmusic.com"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="description" content="" />
-    <title>黃偉恆</title>
+    <title>Alexander Wong</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <link rel="stylesheet" type="text/css" media="all" href="css/index_ch.css">
+    <link rel="stylesheet" type="text/css" media="all" href="css/index.css">
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/9b5ec468f6.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
@@ -31,32 +31,32 @@
     <div class="right_menu">
         <div class="lang_area">
             <select class="lang" onchange="location.href = 'index'+this.value+'.html';">
-                <option value="_ch" selected>中文</option>
-                <option value="">EN</option>
+                <option value="" selected>EN</option>
+                <option value="_ch" >中文</option>
             </select>
             <i class="fas fa-chevron-down" aria-hidden="true"></i>
         </div>
-        <a href="#" class="go go_news">最新消息</a>
-        <a href="#" class="go go_about">關於我</a>
-        <a href="#" class="go go_videos">影片</a>
-        <a href="#" class="go go_music">音樂</a>
-        <a href="#" class="go go_footer">聯絡我</a>
+        <a href="#" class="go go_news">NEWS</a>
+        <a href="#" class="go go_about">ABOUT</a>
+        <a href="#" class="go go_videos">VIDEOS</a>
+        <a href="#" class="go go_music">MUSIC</a>
+        <a href="#" class="go go_footer">CONTACT</a>
     </div>
     <header>
-        <p>黃偉恆</p>
+        <p>ALEXANDER WONG</p>
         <nav>
             <div class="lang_area">
                 <select class="lang" onchange="location.href = 'index'+this.value+'.html';">
-                    <option value="_ch" selected>中文</option>
-                    <option value="">EN</option>
+                    <option value="" selected>EN</option>
+                    <option value="_ch">中文</option>
                 </select>
                 <i class="fas fa-chevron-down" aria-hidden="true"></i>
             </div>
-            <a href="#" class="go go_news">最新消息</a>
-            <a href="#" class="go go_about">關於我</a>
-            <a href="#" class="go go_videos">影片</a>
-            <a href="#" class="go go_music">音樂</a>
-            <a href="#" class="go go_footer">聯絡我</a>
+            <a href="#" class="go go_news">NEWS</a>
+            <a href="#" class="go go_about">ABOUT</a>
+            <a href="#" class="go go_videos">VIDEOS</a>
+            <a href="#" class="go go_music">MUSIC</a>
+            <a href="#" class="go go_footer">CONTACT</a>
         </nav>
         <div class="right_menu_btn">
             <span></span>
@@ -65,22 +65,22 @@
     <main>
         <section class="s1 ">
             <dl>
-                <dt class="silver_mask">作曲家</dt>
-                <dd>電影</dd>
-                <dd>電視</dd>
-                <dd>多媒體</dd>
+                <dt class="silver_mask">COMPOSER</dt>
+                <dd>FILM</dd>
+                <dd>TV</dd>
+                <dd>MULTIMEDIA</dd>
             </dl>
             <p class="scroll_down"><img src="img/mu.png"></p>
         </section>
         <section class="s2 _news">
-            <h1 data="最新消息">最新消息</h1>
+            <h1 data="NEWS">NEWS</h1>
             <div class="news_area">
                 <dl>
                     <dt>
                         <img src="img/GLIFF+Best+Score+Certificate.jpeg"/>
                     </dt>
                     <dd>
-                        又得獎了！我很榮幸藉著電影【Scary Finger】獲得黃金狐猴國際電影節的《最佳原創配樂》。這部電影在電影節風靡前球！如果你能在附近的音樂節上看到它的演奏，一定要去看看！
+                        Another win!! I’m so honored to have won “Best Original Score” at the Golden Lemur International Film Festival for my work on the film “Scary Finger”. This film is taking the film festival circuit by storm! If you can catch it playing at a local festival near you, definitely check it out!
                     </dd>
                 </dl>
                 <dl>
@@ -88,7 +88,7 @@
                         <img src="img/GBA56.jpeg"/>
                     </dt>
                     <dd>
-                        我有幸為 Netflix 進行最新的創作，《預支未來》在第 56 屆年度金鐘獎中獲得三項入圍！包括：最佳電視迷你劇、迷你劇最佳新人和最佳燈光。很榮幸能參與這個節目，並與如此出色的團隊一起工作。恭喜所有參與讓這個節目栩栩如生的人，你們的辛勤工作和奉獻得到了回報！
+                        The latest Netflix project that I had the honor of writing the music for, “Futmalls” was just nominated for 3 categories at the 56th Annual Golden Bell Awards (Taiwan’s equivalent of the Emmy Awards)!! The nominations include: Best Television Miniseries, Best Newcomer in a Miniseries, and Best Lighting. Such a great honor to be a part of this show, and to have worked with such an amazing team on it. Congratulations to everyone who was involved in bringing this show to life, your hard work and dedication has paid off!!
                     </dd>
                 </dl>
                 <dl>
@@ -96,7 +96,7 @@
                         <img src="img/MindField_BestScore.jpeg"/>
                     </dt>
                     <dd>
-                        我很榮幸在明菲爾德電影節上獲得《最佳原創配樂》！我們的電影【Scary Finger】還獲得了《最佳導演》、《最佳男演員》和《最佳新墨西哥州短片》！感謝 Colin A. Borden 和整個團隊讓這部電影真正變得特別和令人驚嘆，我為它寫樂譜非常有趣！為每個人和我們所做的工作感到驕傲！
+                        I’m so honored to have won “Best Original Score” at the Mindfield Film Festival!! Our film【Scary Finger】also won “Best Director”, “Best Actor”, and “Best New Mexico Short Film”! Thank you Colin A. Borden, and the entire team for making this movie truly something special and amazing, I had so much fun writing the score for it!! So proud of everyone and the work we’ve done!
                     </dd>
                 </dl>
                 <dl>
@@ -106,9 +106,9 @@
                         </div>
                     </dt>
                     <dd>
-                        我為《預支未來》寫的片尾曲剛剛作為單曲發行，在這裡查看！也可於各大音樂串流媒體播放。
+                        The end credits song I wrote for “Futmalls” was just released as a single, check it out here! Also available on most major music streaming services.
                     </dd>
-                    <div class="btn_area"><a href="https://ffm.to/9m88_invisiblecities" target="_blank"><button>點擊播放歌曲</button></a></div>
+                    <div class="btn_area"><a href="https://ffm.to/9m88_invisiblecities" target="_blank"><button>Click To Stream The Song</button></a></div>
                 </dl>
                 <dl>
                     <dt>
@@ -117,7 +117,7 @@
                         </div>
                     </dt>
                     <dd>
-                        <h2>在這裡查看《預支未來》的預告片！</h2>
+                        <h2>Check out the trailer for “Futmalls” here!</h2>
                     </dd>
                 </dl>
                 <dl>
@@ -125,7 +125,7 @@
                         <img src="img/Futmalls_Poster_HD.jpg"/>
                     </dt>
                     <dd>
-                        我拍的最新電視劇是科幻和警探劇的精彩融合！《預支未來》現已可在全球 Netflix 上瀏覽。
+                        The latest TV series that I scored is an exciting blend of sci-fi and police detective drama! “Futmalls” is now available on Netflix worldwide.
                     </dd>
                 </dl>
                 <dl>
@@ -133,7 +133,7 @@
                         <img src="img/gba.jpg"/>
                     </dt>
                     <dd>
-                        很高興與大家分享，我們的節目《魂囚西門》剛剛入圍2019年金鐘獎的三大獎項！包括《最佳迷你劇》、《迷你劇最佳女主角》（謝盈萱的精彩表演）和《聲音設計獎》（包括音樂和音效設計）。非常榮幸和感謝能與如此出色的團隊合作，將演出的音樂帶入生活！
+                        I am so happy to share that our show "Green Door" was just nominated for 3 major awards for the 2019 Golden Bell Awards, Taiwan's equivalent to the Emmy Awards! The nominations are for "Best Miniseries", "Best Leading Actress in a Miniseries" (an amazing performance by Hsieh Ying-Hsuan), and "Best Sound" (Which includes the Music and Sound Design). Very honored and thankful to have worked with such an amazing team to bring the music for the show to life!
                     </dd>
                 </dl>
                 <dl>
@@ -143,7 +143,7 @@
                         </div>
                     </dt>
                     <dd>
-                        看看這個幕後花絮，看看我們是如何為《魂囚西門》創作配樂的！
+                        Check out this Behind the Scenes look at how we created the score for “Green Door!”<br>Turn on Closed Captions for English subtitles.
                     </dd>
                 </dl>
                 <dl>
@@ -156,7 +156,7 @@
                         </div>
                     </dt>
                     <dd>
-                        《魂囚西門》電視原聲帶現已上架各大音樂平台！實體專輯 CD 僅在台灣提供。
+                        The Original Television Soundtrack for “Green Door” is now available on most major streaming platforms! Physical album CD available in Taiwan only.
                     </dd>
                 </dl>
                 <dl>
@@ -164,7 +164,7 @@
                         <img src="img/Green+Door+Poster.jpg"/>
                     </dt>
                     <dd>
-                        黃偉恆 最近剛剛完成了一部新的 Netflix 迷你劇《魂囚西門》的配樂！該節目現已可在全球 Netflix 上播放。不要錯過！
+                        Alex just recently finished scoring a new Netflix drama miniseries, “Green Door”! The show is now available on Netflix worldwide. Don’t miss it!
                     </dd>
                 </dl>
                 <dl>
@@ -174,7 +174,7 @@
                         </div>
                     </dt>
                     <dd>
-                        <h2>在此處查看《魂囚西門》的官方預告片！</h2>
+                        <h2>View the Official Trailer for “Green Door” here!</h2>
                     </dd>
                 </dl>
                 <dl>
@@ -184,30 +184,30 @@
                         </div>
                     </dt>
                     <dd>
-                        <h2>片尾主題曲《Haunting Me》官方MV</h2>
+                        <h2>The Official Music Video for the Ending Theme Song “Haunting Me”</h2>
                     </dd>
                 </dl>
             </div>
         </section>
         <section class="s3 _about">
-            <h1 data="關於我">關於我</h1>
+            <h1 data="ABOUT">ABOUT</h1>
             <dl>
                 <dt><img src="img/IMG_5636.jpg"/></dt>
                 <dd>
                     <p>
-                        黃偉恆 積極為電影、電視和多媒體作曲，項目遍及舊金山、洛杉磯、紐約、台北、北京和上海。他的音樂出現在短片（動畫和真人秀）、廣告（產品和服務）、促銷營銷影片和各種網路內容中。他還為合唱團和現場管弦樂隊創作了幾部作品，他的音樂也曾在音樂會上演出。
+                        Alexander Wong actively composes for film, television, and multimedia with projects spanning San Francisco, Los Angeles, New York, Taipei, Beijing and Shanghai. His music is featured in short films (animation and live action), advertisements (products and services), promotional marketing videos, and a variety of web content. He also has several works in progress for choir and live orchestra, and his music has been performed in concert as well.
                     </p>
                     <p>
-                        黃偉恆 撰寫了台灣戲劇系列的樂譜：《魂囚西門》，由著名的台灣歌手 蕭敬騰 主演。 蕭敬騰 還演唱了黃偉恆 為該系列的片尾曲。由黃偉恆 擔任首席作曲家和音樂總監，於 2019 年在台灣電視台播出，並在全球 190 多個國家/地區的 Netflix 上播出。黃偉恆 在《魂囚西門》中的作品也獲得了2019年金鐘獎《聲音設計獎》的提名，台灣相當於艾美獎獎。《聲音設計獎》包括音樂和演出的聲音設計。《魂囚西門》還獲得了金鐘獎《最佳迷你劇》和《迷你劇最佳女主角》的提名。黃偉恆 還為短片《霰彈槍》配樂，該短片在電影節巡迴演出中獲得了廣泛好評。它在雙子層國際電影節上獲得《最佳喜劇短片》和《最佳短片女演員》提名，並在新墨西哥州馬德里電影節上獲得《最佳製作》。2020年，黃偉恆 為Netflix台灣科幻/警察局電視劇（Netflix Taiflix Sci-Fi/Police Drama）組成了分數：《 預支未來》，在那裡他再次擔任首席作曲家和音樂主管。黃偉恆 還創作了 End Credits 歌曲，其中包括獲獎歌手 9m88 和美國搖滾樂隊 Hoobastank 的貝斯手 Jesse Charland。《預支未來》被提名為 2021 年金鐘獎的《最佳電視迷你劇》、《迷你劇最佳新人》和《最佳燈光》。黃偉恆 還為短片《Scary Finger》組成了樂譜，他在北美的Mindfield電影節和歐洲的Golden Lemur International Film Festival贏得了《最佳原創樂譜》。
+                        Alex composed the score for the Taiwanese drama series: “Green Door”, starring famous Taiwanese singer Jam Hsiao. Jam Hsiao also sings the End Credits song that Alex wrote for the series. Alex served as both Lead Composer and Music Supervisor on the project, which aired on Taiwanese television in 2019 and is also available on Netflix globally in over 190 countries. Alex’s work in “Green Door” was also nominated for the “Best Sound Award” for the 2019 Golden Bell Awards, Taiwan’s equivalent to the Emmy Awards. The “Best Sound Award” includes the Music as well as Sound Design for the show. “Green Door” was also nominated for “Best Miniseries” and “Best Leading Actress in a Miniseries” for the Golden Bell Awards. Alex also composed the score for the short film “Shotgun”, which has garnered much acclaim in the film festival circuit. It was nominated for “Best Comedy Short” and “Best Actress in a Short” at the Twin Tiers International Film Festival, and won “Best Production” at the Madrid Film Festival in New Mexico. In 2020, Alex composed the score for the Netflix  Taiwanese sci-fi/police drama series: “Futmalls”, where he once again served as Lead Composer and Music Supervisor. Alex also wrote the End Credits song, featuring award winning singer 9m88 and the bassist from the American rock band Hoobastank, Jesse Charland. “Futmalls” was nominated for “Best Television Miniseries”, “Best Newcomer in a Miniseries”, and “Best Lighting” at the 2021 Golden Bell Awards. Alex also composed the score for the short film “Scary Finger”, which he won “Best Original Score” at both the Mindfield Film Festival in North America and the Golden Lemur International Film Festival in Europe.
                     </p>
                     <p>
-                        黃偉恆 在加州大學洛杉磯分校（UCLA）的朱莉亞德音樂學院（Juilliard Music School）學習了音樂理論，並擁有紐約大學音樂技術碩士學位，取得電影和多媒體的專業知識。他在台灣著名的世新大學教授音樂和音頻製作、聲音設計和電影配樂，同時還管理著他們的校內錄音室。黃偉恆 目前是國立臺北藝術大學的教職員工。他還在該大學開發一個全新的課程，該課程將包含音樂和動態影像的專業製作。此外，黃偉恆 在他的個人音樂工作室教私人課程。有時，黃偉恆 會舉辦有關電影音樂主題的研討會，並為懷抱理想的學生進行音樂創作。
+                        Alex studied music theory at The Juilliard School of Music, film scoring at UCLA, and holds a Master of Music in Music Technology from New York University with an emphasis in Scoring for Film and Multimedia. He taught music and audio production, sound design, and film scoring at Taiwan's renowned Shih Hsin University while also managing their on-campus Recording Studio. Alex currently serves as a faculty member at Taipei National University of the Arts, the leading performing arts school in Taiwan. He is also helping the university develop a brand new program which will focus on music and the moving image. In addition, Alex teaches private lessons at his personal music studio. Occasionally, Alex holds workshops and seminars on the subjects of Film Music, and Composing Music for Media for aspiring students.
                     </p>
                 </dd>
             </dl>
         </section>
         <section class="s4 _videos">
-            <h1 data="影片">影片</h1>
+            <h1 data="VIDEOS">VIDEOS</h1>
             <div class="videos_area">
                 <div class="video">
                     <div class="video-container">
@@ -227,7 +227,7 @@
             </div>
         </section>
         <section class="s5 _music">
-            <h1 data="音樂">音樂</h1>
+            <h1 data="MUSIC">MUSIC</h1>
             <div class="music_frame">
                 <iframe width="100%" height="" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/129665374%3Fsecret_token%3Ds-XvYrs&color=%23ff0000&auto_play=false&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=true"></iframe>
             </div>
@@ -240,7 +240,7 @@
     <footer class="_footer">
         <dl class="contact">
             <dt>
-                <p>聯絡資訊：</p>
+                <p>CONTACT INFORMATION:</p>
                 <p><a class="mail" href="mailto:alex@alexwongmusic.com">alex@alexwongmusic.com</a></p>
             </dt>
             <dd>
